# spi-nand-prog

./: .gitignore  CMakeLists.txt  README.md  flashops.c  main.c
include/: flashops.h  linux-err.h  linux-types.h  nand.h  spi-mem-drvs.h  spi-mem.h  spi.h  spinand.h
spi-mem/: spi-mem-drvs.c  spi-mem-fx2qspi.c  spi-mem-serprog.c  spi-mem.c
spi-mem/ch347/: ch347.c  ch347.h  spi-mem.c
spi-nand/: core.c  gigadevice.c  macronix.c  micron.c  paragon.c  toshiba.c  winbond.c
